--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,9 +12,6 @@ body {
     pointer-events: auto;
 }
 
-a.goog-te-menu-value:hover span {
-    background: none !important;
-}
 
 /*
 */
@@ -33,6 +30,12 @@ a.goog-te-menu-value:hover span {
     border: none !important;
     box-shadow: none !important;
 }
+
+.google-src-text {
+    background-color: transparent !important;
+    text-decoration: none !important;
+}
+
 
 #google_translate_element,
 .skiptranslate,
