--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -196,6 +196,18 @@ nav_enabled: false
         <div class="main-content-wrap">
             <div id="main-content" class="main-content">
                 <main>
+
+
+                    <div class="overlay-container">
+                        <p class="google-src-text">This text is translated by Google Translate and should not have a
+                            blue highlight on
+                            mouseover.</p>
+                        <div class="overlay"></div>
+                    </div>
+
+
+
+
                     {{ content }}
                 </main>
 
