--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,14 +13,28 @@ body {
 }
 
 
-/*
-*/
+.overlay-container {
+    position: relative;
+    display: inline-block;
+}
 
-font {
+.overlay {
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: transparent;
 }
+
+.google-src-text {
+    z-index: 1;
+}
+
+/*
+*/
+
 
 .goog-tooltip {
     display: none !important;
