--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -175,21 +175,14 @@ nav_enabled: false
             {% include components/aux_nav.html %}
             {% endif %}
             <div class="dropdown">
-                <button class="dropbtn">Language</button>
-                <div class="dropdown-lang">
+                <button class="dropbtn">🌐</button>
+                <div class="dropdown-lang notranslate">
                     <a href="#" class="lang-select" data-lang="en">English</a>
-                    <a href="#" class="lang-select" data-lang="es">Spanish</a>
-                    <a href="#" class="lang-select" data-lang="it">Italian</a>
-                    <a href="#" class="lang-select" data-lang="de">German</a>
-                    <a href="#" class="lang-select" data-lang="pt">Portuguese</a>
-                    <a href="#" class="lang-select" data-lang="fr">French</a>
-                    <a href="#" class="lang-select" data-lang="ru">Russian</a>
-                    <a href="#" class="lang-select" data-lang="hr">Croatian</a>
-                    <a href="#" class="lang-select" data-lang="ar">Arabic</a>
-                    <a href="#" class="lang-select" data-lang="iw">Hebrew</a>
-                    <a href="#" class="lang-select" data-lang="zh-CN">Chinese</a>
-                    <a href="#" class="lang-select" data-lang="ja">Japanese</a>
-                    <a href="#" class="lang-select" data-lang="ko">Korean</a>
+                    <a href="#" class="lang-select" data-lang="es">Español</a>
+                    <a href="#" class="lang-select" data-lang="it">Italiano</a>
+                    <a href="#" class="lang-select" data-lang="de">Deutsch</a>
+                    <a href="#" class="lang-select" data-lang="pt">Português</a>
+                    <a href="#" class="lang-select" data-lang="fr">Français</a>
                 </div>
             </div>
         </div>
