--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -174,9 +174,9 @@ nav_enabled: false
             {% if site.aux_links %}
             {% include components/aux_nav.html %}
             {% endif %}
-            <div class="dropdown">
-                <button class="dropbtn">Language</button>
-                <div class="dropdown-lang notranslate">
+            <div class="dropdown notranslate">
+                <button class="dropbtn">Translate</button>
+                <div class="dropdown-lang">
                     <a href="#" class="lang-select" data-lang="en">English</a>
                     <a href="#" class="lang-select" data-lang="es">Español</a>
                     <a href="#" class="lang-select" data-lang="it">Italiano</a>
@@ -346,7 +346,7 @@ nav_enabled: false
             }
         });
         */
-        /*
+
         document.addEventListener('DOMContentLoaded', () => {
             const wrapMainSection = (mainSection) => {
                 const containerDiv = document.createElement('div');
@@ -361,7 +361,7 @@ nav_enabled: false
                 wrapMainSection(mainSection);
             }
         });
-        */
+
 
 
 
