--- a/_layouts/test.html
+++ b/_layouts/test.html
@@ -304,7 +304,7 @@ nav_enabled: false
     </script>
 -->
 
-    <script src="{{ '/assets/jss/script.css' | relative_url }}" async></script>
+    <script src="{{ '/assets/js/script.js' | relative_url }}" async></script>
     <script src="https://translate.google.com/translate_a/element.js?cb=translate" async></script>
     {%- include components/mermaid.html -%}
 </body>
